Bookmark description overflow fix.
https://my.teamline.app/tasks/uYQAbTJqiXSqEtzbY

--- a/assets/css/freelancehunt.css
+++ b/assets/css/freelancehunt.css
@@ -49,6 +49,10 @@
     padding-right: 0;
 }
 
+.kg-bookmark-description {
+    overflow-x: hidden;
+}
+
 .site-footer-nav a:first-child {
     margin-left: 0;
 }
